fix banner from not showing and improved the fqa among a few other things

--- a/index.css
+++ b/index.css
@@ -113,10 +113,10 @@ body {
 .card-hours,
 .history-card,
 .food-card, 
-.review-card {
+.review-card,
+.fqa-card {
   border-radius: 2rem !important;
   border: 4px solid red !important;
-  margin: 50px;
 }
 
 #reviews .card {
@@ -131,6 +131,16 @@ body {
 .history-card {
   max-height: 300px;
   overflow-y: auto;
+}
+
+.fqa-card {
+  min-height: 460px;
+}
+
+@media (max-width: 1000px) {
+  .fqa-card {
+    min-height: 300px; /* Set a different minimum height for small screens */
+  }
 }
 
 /* Images */
@@ -160,5 +170,6 @@ input, textarea, select {
 }
 
 .link {
-color: red;
+  font-weight: bold;
+  color: red;
 }
